# zkpGethEth

./: LICENSE  README.md
risc0-nova/: Cargo.toml
risc0-nova/risc0/r0vm/: Cargo.toml
risc0-nova/risc0/zkvm/: Cargo.toml
risc0-nova/risc0/zkvm/platform/src/: lib.rs  memory.rs  syscall.rs
risc0-nova/risc0/zkvm/src/: lib.rs  opcode.rs  session.rs
risc0-nova/risc0/zkvm/src/binfmt/: elf.rs  image.rs
risc0-nova/risc0/zkvm/src/exec/: env.rs  mod.rs  monitor.rs
riscvgo/: demo
rrs/rrs-cli/src/: main.rs
rrs/rrs-lib/src/: instruction_executor.rs  instruction_formats.rs  instruction_string_outputter.rs  lib.rs  memories.rs  process_instruction.rs
