[workspace]
resolver = "2"
members = [
  "risc0/build_kernel",
  "risc0/core",
  "risc0/r0vm",
  "risc0/sys",
  "risc0/zkvm",
  "risc0/zkvm/platform",
]
exclude = [
  "tools/crates-validator"
]

[patch.crates-io]
 rrs-lib = { path = "../rrs/rrs-lib/"}

[workspace.package]
version = "0.14.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[workspace.dependencies]
risc0-build-kernel   = { version = "0.14.0", default-features = false, path = "risc0/build_kernel" }
risc0-core           = { version = "0.14.0", default-features = false, path = "risc0/core" }
risc0-sys            = { version = "0.14.0", default-features = false, path = "risc0/sys" }
risc0-zkvm           = { version = "0.14.0", default-features = false, path = "risc0/zkvm" }
risc0-zkvm-platform  = { version = "0.14.0", default-features = false, path = "risc0/zkvm/platform" }

[profile.bench]
lto = true

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
